Fixed visual oddity with custom scrollbar

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 /*Scrollbar*/
 ::-webkit-scrollbar {
   width: 10px;
+  height: 10px;
 }
 
 ::-webkit-scrollbar-track {
